--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_FIREBASE_API_KEY="AIzaSyB7xSiUZPObsFPscjplWaDdZ1UA58_biHc"
-VITE_FIREBASE_AUTH_DOMAIN="eztrade-auth.firebaseapp.com"
-VITE_FIREBASE_PROJECT_ID="eztrade-auth"
+VITE_FIREBASE_API_KEY=""
+VITE_FIREBASE_AUTH_DOMAIN=""
+VITE_FIREBASE_PROJECT_ID=""
 VITE_EZTRADE_API_URL=""
